# bestreads

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: client.py  main.py  parser.py  search_books.py
scripts/tests/: test_client.py  test_parser.py  test_search_books.py
