[project]
name = "bestreads"
version = "0.1.0"
description = "Search Goodreads for books and reviews"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
pythonpath = ["."]
